test script added for dumping xmi files and reading line by line